# mce-django-app

./: .bandit  .coveralls.yml  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  manage.py  setup.cfg  setup.py
mce_django_app/: __init__.py  _version.py  apps.py  constants.py  db_log_handler.py  exceptions.py  perms.py  signals.py  urls.py  utils.py
mce_django_app/admin/: __init__.py  account.py  aws.py  azure.py  base.py  common.py  gcp.py  logs.py  vsphere.py
mce_django_app/api/: metadata.py  perms.py  urls.py
mce_django_app/forms/: common.py
mce_django_app/migrations/: 0001_initial.py  0002_auto_20200420_2102.py  0002_auto_20200428_0254.py  0002_auto_20200508_1508.py  0002_auto_20200513_0248.py  0002_delete_taskresult.py  0002_statuslog.py  0003_auto_20200513_0648.py  0003_auto_20200516_1326.py
mce_django_app/models/: __init__.py  account.py  aws.py  azure.py  common.py  gcp.py  logs.py  push.py  tasks.py  vsphere.py
mce_django_app/providers_utils/: aws.py  azure.py  vsphere.py
mce_django_app/pytest/: plugin.py
project_test/: asgi.py  dashboard.py  menu.py  runner.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_functional.py  test_utils.py
tests/admin/: test_common.py
tests/api/: conftest.py
tests/app_test/: asgi.py  settings.py  urls.py  wsgi.py
tests/azure/: test_model_resource_azure.py  test_model_resource_group_azure.py  test_model_subscription.py
tests/common/: conftest.py  test_model_generic_account.py  test_model_resource.py  test_model_resource_event_change.py  test_model_resource_type.py  test_model_tag.py
(+41 files in other folders)
