[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[tool:pytest]
DJANGO_SETTINGS_MODULE = project_test.settings
testpaths = tests
addopts = --cov=mce_django_app --cov-branch --create-db

[coverage:run]
source = mce_django_app

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

