[metadata]
license_files = LICENSE

[bdist_wheel]
universal=1

[tool:pytest]
DJANGO_SETTINGS_MODULE = project_test.settings
testpaths = tests
addopts = -p no:warnings --strict-markers --no-migrations --reuse-db --cov=mce_django_app --cov-branch

[coverage:run]
source = mce_django_app
omit =
    mce_django_app/pytest/*
    mce_django_app/_version.py

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:

[flake8]
max-line-length = 127

[versioneer]
VCS = git
style = pep440
versionfile_source = mce_django_app/_version.py
versionfile_build = mce_django_app/_version.py
tag_prefix =
parentdir_prefix = mce-django-app-
